--- a/res/values-te/strings.xml
+++ b/res/values-te/strings.xml
@@ -411,6 +411,7 @@
     <string name="security_settings_face_watch_preference_summary" msgid="5817376447253802793">"ముఖం, <xliff:g id="WATCH">%s</xliff:g> జోడించబడ్డాయి"</string>
     <string name="security_settings_fingerprint_single_face_watch_preference_summary" msgid="764951912234638192">"ముఖం, వేలిముద్ర, <xliff:g id="WATCH">%s</xliff:g> జోడించబడ్డాయి"</string>
     <string name="security_settings_fingerprint_multiple_face_watch_preference_summary" msgid="3935500711366489380">"ముఖం, వేలిముద్రలు, <xliff:g id="WATCH">%s</xliff:g> జోడించబడ్డాయి"</string>
+    <string name="mandatory_biometrics_prompt_description" msgid="5461737411954922392">"ఐడెంటిటీ చెక్ ఆన్‌లో ఉన్నందున ఇలా చేయడం అవసరం"</string>
     <string name="security_settings_remoteauth_preference_title" msgid="8319680328086089533">"రిమోట్ ప్రామాణీకరణదారు అన్‌లాక్"</string>
     <string name="security_settings_remoteauth_preference_summary" msgid="1507004469316635196">"వాచ్ జోడించబడింది"</string>
     <string name="security_settings_remoteauth_enroll_introduction_title" msgid="2151004795778999671">"మీ వాచ్‌ను సెటప్ చేయండి"</string>
@@ -1927,8 +1928,6 @@
     <string name="keyboard_options_category" msgid="8040137073401152608">"ఆప్షన్‌లు"</string>
     <string name="keyboard_a11y_category" msgid="8230758278046841469">"యాక్సెసిబిలిటీ"</string>
     <string name="physical_keyboard_title" msgid="3328134097512350958">"భౌతిక కీబోర్డ్"</string>
-    <string name="show_ime" msgid="4334255501724746849">"స్క్రీన్‌పై కీబోర్డ్‌ను ఉపయోగించండి"</string>
-    <string name="show_ime_summary" msgid="7293345791727205975">"ఫిజికల్ కీబోర్డ్ యాక్టివ్‌గా ఉన్నప్పుడు దీన్ని స్క్రీన్‌పై ఉంచుతుంది"</string>
     <string name="bounce_keys" msgid="7419450970351743904">"బౌన్స్ కీలు"</string>
     <string name="bounce_keys_summary" msgid="7347050868868080302">"ఏదైనా ఒక కీని <xliff:g id="BOUNCE_KEYS_THRESHOLD">%1$d</xliff:g> మిల్లీ సెకన్ల లోపు తిరిగి నొక్కితే కీబోర్డ్ దాన్ని విస్మరిస్తుంది"</string>
     <string name="slow_keys" msgid="2891452895499690837">"నిదానంగా పనిచేసే కీలు"</string>
@@ -3376,6 +3375,8 @@
     <skip />
     <!-- no translation found for zen_mode_disabled_by_user (138592173630683253) -->
     <skip />
+    <string name="zen_mode_new_title" msgid="4934720193004330740">"మోడ్‌ను క్రియేట్ చేయండి"</string>
+    <string name="zen_mode_new_option_custom" msgid="1060993879440003341">"అనుకూలంగా మార్చు"</string>
     <string name="zen_mode_slice_subtitle" msgid="6849372107272604160">"అంతరాయాలను పరిమితం చేయండి"</string>
     <string name="zen_mode_settings_turn_on_dialog_title" msgid="7500702838426404527">"అంతరాయం కలిగించవద్దును ఆన్ చేయండి"</string>
     <string name="zen_mode_behavior_alarms_only" msgid="2956938533859578315">"అలారంలు, మీడియా శబ్దాలు అంతరాయం కలిగించగలవు"</string>
@@ -3396,8 +3397,7 @@
     <string name="zen_mode_set_schedule_title" msgid="8023100831320026233">"షెడ్యూల్‌ను సెట్ చేయండి"</string>
     <string name="zen_mode_set_schedule_link" msgid="2534032127923435737">"షెడ్యూల్ చేయండి"</string>
     <string name="zen_mode_schedule_duration" msgid="299332195675875111">"<xliff:g id="HOURS">%1$d</xliff:g> గం., <xliff:g id="MINUTES">%2$d</xliff:g> నిమి."</string>
-    <!-- no translation found for zen_mode_configuration_link_title (4718358055721023371) -->
-    <skip />
+    <string name="zen_mode_configuration_link_title" msgid="4718358055721023371">"ఆటోమేటిక్‌గా ఆన్ చేయండి"</string>
     <string name="zen_mode_schedule_category_title" msgid="1381879916197350988">"షెడ్యూల్"</string>
     <string name="zen_mode_automation_suggestion_title" msgid="7776129050500707960">"కొన్ని సమయాల్లో ఫోన్‌ని నిశ్శబ్దంగా ఉంచు"</string>
     <string name="zen_mode_automation_suggestion_summary" msgid="1946750790084170826">"అంతరాయం కలిగించవద్దు నియమాలు సెట్ చేయండి"</string>
@@ -3541,6 +3541,7 @@
     <string name="notification_history_open_notification" msgid="2655071846911258371">"నోటిఫికేషన్‌ను తెరువు"</string>
     <string name="snooze_options_title" msgid="2109795569568344617">"నోటిఫికేషన్‌లను తాత్కాలికంగా ఆపివేయడాన్ని అనుమతించండి"</string>
     <string name="notification_badging_title" msgid="5469616894819568917">"యాప్ చిహ్నంపై నోటిఫికేషన్ డాట్"</string>
+    <string name="notification_bundles" msgid="3614044525822580826">"నోటిఫికేషన్ బండిల్స్"</string>
     <string name="notification_bubbles_title" msgid="5681506665322329301">"బబుల్స్"</string>
     <string name="bubbles_app_toggle_title" msgid="5319021259954576150">"బబుల్స్"</string>
     <string name="bubbles_conversation_toggle_title" msgid="5225039214083311316">"ఈ సంభాషణను బబుల్ చేయండి"</string>
@@ -3833,6 +3834,8 @@
     <string name="zen_mode_apps_none_apps" msgid="2493642312793604327">"ఏదీ లేదు"</string>
     <string name="zen_mode_apps_all_apps" msgid="705700582778445484">"అన్నీ"</string>
     <!-- no translation found for zen_mode_apps_subtext (1764211974662012877) -->
+    <skip />
+    <!-- no translation found for zen_mode_apps_calculating (5420121396943539286) -->
     <skip />
     <string name="zen_mode_bypassing_apps" msgid="625309443389126481">"భర్తీ చేయడానికి యాప్‌లను అనుమతించండి"</string>
     <string name="zen_mode_bypassing_apps_header" msgid="60083006963906906">"అంతరాయం కలిగించగల యాప్‌లు"</string>
@@ -4858,8 +4861,10 @@
     <string name="bluetooth_middle_name" msgid="3909371955137442319">"కేస్"</string>
     <string name="bluetooth_header_battery_content_description" msgid="3804237436331504879">"బ్యాటరీ"</string>
     <string name="settings_panel_title" msgid="346363079938069215">"సెట్టింగ్‌ల ప్యానెల్"</string>
-    <string name="force_desktop_mode" msgid="1336913605091334238">"ఫోర్స్ డెస్క్‌టాప్ మోడ్"</string>
-    <string name="force_desktop_mode_summary" msgid="4587416867846930479">"ఇతర డిస్‌ప్లేలలో తప్పనిసరి ప్రయోగాత్మక డెస్క్‌టాప్ మోడ్"</string>
+    <string name="enable_desktop_mode" msgid="5644818402534562302">"ఫ్రీఫార్మ్ విండోలను ఎనేబుల్ చేయండి"</string>
+    <string name="enable_desktop_mode_summary" msgid="7606643229185242771">"ఫ్రీఫార్మ్ విండోలకు సంబంధించిన సపోర్ట్‌ను ఎనేబుల్ చేయండి."</string>
+    <string name="force_desktop_mode" msgid="8292039809783522466">"2వ డిస్‌ప్లేలో ఫ్రీఫార్మ్ విండోయింగ్ ఎనేబుల్ చేయి"</string>
+    <string name="force_desktop_mode_summary" msgid="6534513232678335875">"ఫ్రీఫార్మ్ విండోలను ప్రత్యామ్నాయ డిస్‌ప్లేలో మాత్రమే ఎనేబుల్ చేయండి."</string>
     <string name="enable_non_resizable_multi_window" msgid="6832903754625404477">"మల్టీ-విండోలో సైజ్ మార్చలేని వాటిని ఎనేబుల్ చేయండి"</string>
     <string name="enable_non_resizable_multi_window_summary" msgid="3275763753261901999">"సైజ్ మార్చలేని యాప్‌లను మల్టీ-విండోలో ఉండేందుకు అనుమతిస్తుంది"</string>
     <string name="hwui_force_dark_title" msgid="4256904905631994219">"ఫోర్స్‌-డార్క్‌ను ఓవర్‌రైడ్ చేయడం"</string>
@@ -4927,17 +4932,14 @@
     <string name="confirm_format_ext4_text" msgid="7940372488624630214">"16KB డెవలపర్ ఆప్షన్‌ను ఉపయోగించే ముందు ఈ పరికరం తాలూకు డేటా పార్టిషన్‌ను ext4కి మార్చాలి. ఈ మోడ్‌లో సాఫ్ట్‌వేర్ ఖచ్చితత్వానికి హామీ ఇవ్వబడదు, బూట్‌లోడర్ అన్‌లాక్ చేయబడినప్పుడు ఫోన్‌లో స్టోర్ చేయబడిన ఏదైనా డేటా ప్రమాదంలో ఉండవచ్చు. 16KB ఆప్షన్‌ను యాక్టివేట్ చేయడానికి దీని తర్వాత మరొక సారి రీబూట్ చేయాల్సిన అవసరం ఉంది. మీరు ఈ మోడ్‌లో ఉన్న తర్వాత, మీరు ఒకసారి రీబూట్ చేయడం ద్వారా 4KB, 16KB మోడ్‌ల మధ్య ముందుకు వెనుకకు మారవచ్చు. ఈ మోడ్‌లలో కొన్ని ఫీచర్‌లు డిజేబుల్ చేయబడతాయి, కాబట్టి కొన్ని అప్లికేషన్‌లు పని చేయకపోవచ్చు. పరికరాన్ని ప్రొడక్షన్ మోడ్‌కు అందించడానికి, మీరు 4KB మోడ్‌కు స్విచ్ అవ్వాలి, ఆపై పరికరాన్ని ఫ్యాక్టరీ రీసెట్ చేసే బూట్‌లోడర్‌ను లాక్ చేయాలి. పరికరం విజయవంతంగా Androidలోకి బూట్ అయిన తర్వాత, డెవలపర్ ఆప్షన్‌లలో OEM అన్‌లాకింగ్‌ను డిజేబుల్ చేయండి. నిర్ధారించిన తర్వాత పరికరం పూర్తిగా తొలగించబడుతుంది, ఫైల్‌సిస్టమ్ ext4కి మార్చబడుతుంది. ఇది పూర్తయిన తర్వాత, దయచేసి 16KBని మళ్లీ ఎనేబుల్ చేయడానికి తిరిగి రండి."</string>
     <string name="confirm_ext4_button_text" msgid="6045501984773738407">"మొత్తం డేటాను ఫ్యాక్టరీ రీసెట్ చేయండి"</string>
     <string name="format_ext4_failure_toast" msgid="8059453995800471549">"డేటా పార్టిషన్‌ను ext4కి రీఫార్మాట్ చేయడం, పూర్తిగా తొలగించడం విఫలమైంది."</string>
-    <!-- no translation found for confirm_oem_unlock_for_16k_title (6062041826568112078) -->
-    <skip />
+    <string name="confirm_oem_unlock_for_16k_title" msgid="6062041826568112078">"బూట్‌లోడర్ అన్‌లాక్ అవసరం"</string>
     <string name="confirm_oem_unlock_for_16k_text" msgid="3583604865119937957">"ఈ పరికరంలో 16KB డెవలపర్ ఆప్షన్‌ను ఉపయోగించే ముందు దాని బూట్‌లోడర్‌ను అన్‌లాక్ చేసి ఉండాలి. ఈ మోడ్‌లో సాఫ్ట్‌వేర్ ఖచ్చితత్వానికి హామీ ఉండదు, బూట్‌లోడర్ అన్‌లాక్ అయినప్పుడు ఫోన్‌లో స్టోర్ అయిన ఏదైనా డేటా ప్రమాదంలో ఉండవచ్చు. 16KB మోడ్‌ను యాక్టివేట్ చేసినప్పుడు మొత్తం యూజర్ డేటా, సెట్టింగ్‌లు పూర్తిగా తొలగించబడతాయి. ఒక్కసారి బూట్‌లోడర్‌ను అన్‌లాక్ చేసిన తర్వాత, 16KB ఆప్షన్‌ను యాక్టివేట్ చేయడానికి రెండుసార్లు రీబూట్ చేయాల్సిన అవసరం ఉంది. మీరు ఈ మోడ్‌లో ఉన్న తర్వాత, ఒకసారి రీబూట్ చేయడం ద్వారా 4KB, 16KB మోడ్‌ల మధ్య ముందుకు వెనుకకు మారవచ్చు. ఈ మోడ్‌లలో కొన్ని ఫీచర్‌లు డిజేబుల్ అవుతాయి, కాబట్టి కొన్ని అప్లికేషన్‌లు పని చేయకపోవచ్చు. పరికరాన్ని ప్రొడక్షన్ మోడ్‌కు అందించడానికి, మీరు 4KB మోడ్‌కు స్విచ్ అవ్వాలి, ఆపై పరికరాన్ని OEM/బూట్‌లోడర్ లాక్ చేయాలి (తద్వారా ఇది ఫ్యాక్టరీ రీసెట్ అవుతుంది). దయచేసి బూట్‌లోడర్‌ను అన్‌లాక్ చేసి, మళ్లీ ట్రై చేయండి. దీన్ని ఎలా చేయాలో తెలిపే సూచనలను &lt;a href=\"https://source.android.com/docs/core/architecture/bootloader/locking_unlocking\"&gt;https://source.android.com/docs/core/architecture/bootloader/locking_unlocking&lt;/a&gt; లింక్‌లో చూడవచ్చు"</string>
     <string name="page_agnostic_4k_pages_title" msgid="1184703958249093215">"4KB పేజీ అగ్నోస్టిక్ మోడ్‌ను ఉపయోగించడం"</string>
     <string name="page_agnostic_4k_pages_text_short" msgid="2894243902906666242">"మీరు పేజీ అగ్నోస్టిక్ మోడ్‌కు సంబంధించిన 4KB మోడ్‌లో ఉన్నారు. ఈ మోడ్‌లో సాఫ్ట్‌వేర్ ఖచ్చితత్వానికి హామీ ఇవ్వబడదు, బూట్‌లోడర్ అన్‌లాక్ చేయబడినప్పుడు ఫోన్‌లో స్టోర్ చేయబడిన ఏదైనా డేటా ప్రమాదంలో ఉండవచ్చు. ఈ మోడ్‌లలో కొన్ని ఫీచర్‌లు డిజేబుల్ చేయబడతాయి, కాబట్టి కొన్ని అప్లికేషన్‌లు పని చేయకపోవచ్చు. ప్రొడక్షన్ మోడ్‌లోకి మళ్లీ ఎంటర్ అవ్వడానికి, మీరు తప్పనిసరిగా పరికరం తాలూకు బూట్‌లోడర్‌ను లాక్ చేయాలి. మరింత చదవడానికి ట్యాప్ చేయండి."</string>
     <string name="page_agnostic_4k_pages_text" msgid="8284806650260868833">"మీరు పేజీ అగ్నోస్టిక్ మోడ్‌కు సంబంధించిన 4KB మోడ్‌లో ఉన్నారు. ఈ మోడ్‌లో సాఫ్ట్‌వేర్ ఖచ్చితత్వానికి హామీ ఇవ్వబడదు, బూట్‌లోడర్ అన్‌లాక్ చేయబడినప్పుడు ఫోన్‌లో స్టోర్ చేయబడిన ఏదైనా డేటా ప్రమాదంలో ఉండవచ్చు. ఈ మోడ్‌లలో కొన్ని ఫీచర్‌లు డిజేబుల్ చేయబడతాయి, కాబట్టి కొన్ని అప్లికేషన్‌లు పని చేయకపోవచ్చు. ప్రొడక్షన్ మోడ్‌లోకి మళ్లీ ఎంటర్ అవ్వడానికి, మీరు తప్పనిసరిగా పరికరం తాలూకు బూట్‌లోడర్‌ను లాక్ చేయాలి. ఇది పరికరాన్ని మళ్లీ ఫ్యాక్టరీ రీసెట్ చేసి, ప్రొడక్షన్ సెట్టింగ్‌లకు రీస్టోర్ చేస్తుంది. పరికరం విజయవంతంగా Androidలోకి బూట్ అయిన తర్వాత, డెవలపర్ ఆప్షన్‌లలో OEM అన్‌లాకింగ్‌ను డిజేబుల్ చేయండి. పరికరం Androidలో బూట్ చేయడంలో విఫలమైతే లేదా స్థిరంగా లేకపోతే, &lt;a href=\"https://developers.google.com/android/images\"&gt;https://developers.google.com/android/images&lt;/a&gt; వెబ్‌సైట్ నుండి తాజా ఫ్యాక్టరీ ఫర్మ్‌వేర్ ఇమేజ్‌లతో పరికరాన్ని మళ్లీ ఫ్లాష్ చేయండి లేదా &lt;a href=\"https://flash.android.com/back-to-public\"&gt;https://flash.android.com/back-to-public&lt;/a&gt; వెబ్‌సైట్‌ను ఉపయోగించండి, అలాగే \'పరికరాన్ని పూర్తిగా తొలగించండి\', \'బూట్‌లోడర్‌ను లాక్ చేయండి\', \'అన్ని పార్టిషన్‌లను బలవంతంగా ఫ్లాష్ చేయండి\' వంటి ఆప్షన్‌లను ఎంచుకోండి."</string>
     <string name="page_agnostic_16k_pages_title" msgid="7762533464569818498">"16KB పేజీ అగ్నోస్టిక్ మోడ్‌ను ఉపయోగించడం"</string>
-    <!-- no translation found for page_agnostic_16k_pages_text_short (3282018880292691631) -->
-    <skip />
-    <!-- no translation found for page_agnostic_16k_pages_text (2999817238546170627) -->
-    <skip />
+    <string name="page_agnostic_16k_pages_text_short" msgid="3282018880292691631">"మీరు పేజీ సైజ్ ప్రభావం చూపని మోడ్‌కు సంబంధించిన 16KB మోడ్‌లో ఉన్నారు. ఈ మోడ్‌లో సాఫ్ట్‌వేర్ ఇంటిగ్రిటీకి (ఖచ్చితత్వానికి) హామీ ఉండదు, బూట్‌లోడర్ అన్‌లాక్ చేయబడినప్పుడు ఫోన్‌లో స్టోర్ అయిన ఏదైనా డేటా రిస్క్‌లో పడే అవకాశం ఉంది. ఈ మోడ్‌లలో కొన్ని ఫీచర్‌లు డిజేబుల్ చేయబడతాయి, కాబట్టి కొన్ని అప్లికేషన్‌లు పని చేయకపోవచ్చు. ప్రొడక్షన్ మోడ్‌లోకి మళ్లీ ఎంటర్ అవ్వడానికి, మీరు తప్పనిసరిగా 4KB మోడ్‌కు స్విచ్ అవ్వాలి, ఆపై పరికరం తాలూకు బూట్‌లోడర్‌ను లాక్ చేయాలి. మరింత చదవడానికి ట్యాప్ చేయండి."</string>
+    <string name="page_agnostic_16k_pages_text" msgid="2999817238546170627">"మీరు పేజీ సైజ్ ప్రభావం చూపని మోడ్‌కు సంబంధించిన 16KB మోడ్‌లో ఉన్నారు. ఈ మోడ్‌లో సాఫ్ట్‌వేర్ ఇంటిగ్రిటీకి (ఖచ్చితత్వానికి) హామీ ఉండదు, బూట్‌లోడర్ అన్‌లాక్ చేయబడినప్పుడు ఫోన్‌లో స్టోర్ అయిన ఏదైనా డేటా రిస్క్‌లో పడే అవకాశం ఉంది. ఈ మోడ్‌లలో కొన్ని ఫీచర్‌లు డిజేబుల్ చేయబడతాయి, కాబట్టి కొన్ని అప్లికేషన్‌లు పని చేయకపోవచ్చు. ప్రొడక్షన్ మోడ్‌లోకి మళ్లీ ఎంటర్ అవ్వడానికి, మీరు తప్పనిసరిగా 4KB మోడ్‌కు స్విచ్ అవ్వాలి, ఆపై పరికరం తాలూకు బూట్‌లోడర్‌ను లాక్ చేయాలి. ఇది పరికరాన్ని మళ్లీ ఫ్యాక్టరీ రీసెట్ చేసి, ప్రొడక్షన్ సెట్టింగ్‌లకు రీస్టోర్ చేస్తుంది. పరికరం విజయవంతంగా Androidలోకి బూట్ అయిన తర్వాత, డెవలపర్ ఆప్షన్‌లలో OEM అన్‌లాకింగ్‌ను డిజేబుల్ చేయండి. పరికరం Androidలో బూట్ చేయడంలో విఫలమైతే లేదా స్థిరంగా లేకపోతే &lt;a href=\"https://developers.google.com/android/images\"&gt;https://developers.google.com/android/images&lt;/a&gt; వెబ్‌సైట్ నుండి తాజా ఫ్యాక్టరీ ఫర్మ్‌వేర్ ఇమేజ్‌లతో పరికరాన్ని మళ్లీ ఫ్లాష్ చేయండి లేదా &lt;a href=\"https://flash.android.com/back-to-public\"&gt;https://flash.android.com/back-to-public&lt;/a&gt; వెబ్‌సైట్‌ను ఉపయోగించండి, అలాగే \'పరికరాన్ని పూర్తిగా తొలగించండి\', \'బూట్‌లోడర్‌ను లాక్ చేయండి\', \'అన్ని పార్టిషన్‌లను బలవంతంగా ఫ్లాష్ చేయండి\' వంటి ఆప్షన్‌లను ఎంచుకోండి."</string>
     <string name="page_agnostic_notification_channel_name" msgid="1658444283036376361">"16KB పేజీ అగ్నోస్టిక్ మోడ్"</string>
     <string name="page_agnostic_notification_action" msgid="2309805437430150456">"మరింత చదవండి"</string>
     <string name="bug_report_handler_title" msgid="713439959113250125">"బగ్ రిపోర్ట్‌ హ్యాండ్లర్"</string>
@@ -5184,8 +5186,9 @@
     <string name="dream_setup_description" msgid="7508547154038580296">"మీ టాబ్లెట్ డాక్ చేయబడినప్పుడు మీ స్క్రీన్‌పై మీకు ఏమి కనిపించాలో ఎంచుకోండి. స్క్రీన్ సేవర్‌ను ఉపయోగించినప్పుడు మీ పరికరం మరింత పవర్‌ను ఉపయోగించవచ్చు."</string>
     <string name="customize_button_title" msgid="1110284655990203359">"అనుకూలంగా మార్చండి"</string>
     <string name="customize_button_description" msgid="7440248477266126231">"<xliff:g id="SCREENSAVER_NAME">%1$s</xliff:g>‌ను అనుకూలంగా మార్చండి"</string>
-    <string name="reboot_dialog_enable_freeform_support" msgid="6412591361284929149">"ఫ్రీఫారమ్ సపోర్ట్‌ను ఎనేబుల్ చేయడానికి రీబూట్ చేయడం అవసరం."</string>
-    <string name="reboot_dialog_force_desktop_mode" msgid="2021839270403432948">"ద్వితీయ డిస్‌ప్లేలలో డెస్క్‌టాప్ మోడ్‌ను బలవంతంగా ఆన్ చేయడానికి రీబూట్ చేయడం అవసరం."</string>
+    <string name="reboot_dialog_enable_freeform_support" msgid="5526979569538289810">"లెగసీ ఫ్రీఫార్మ్ విండోయింగ్ సపోర్ట్‌ను ఎనేబుల్ చేయడానికి రీబూట్ చేయడం అవసరం."</string>
+    <string name="reboot_dialog_override_desktop_mode" msgid="1557714416232280288">"ఫ్రీఫార్మ్ విండోయింగ్ సపోర్ట్‌ను మార్చడానికి రీబూట్ చేయడం అవసరం."</string>
+    <string name="reboot_dialog_force_desktop_mode" msgid="3647484086248450029">"ప్రత్యామ్నాయ డిస్‌ప్లేలలో ఫ్రీఫార్మ్ విండోయింగ్‌ను బలవంతంగా ఆన్ చేయడానికి రీబూట్ చేయడం అవసరం."</string>
     <string name="reboot_dialog_reboot_now" msgid="235616015988522355">"ఇప్పుడే రీబూట్ చేయండి"</string>
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"తర్వాత రీబూట్ చేయండి"</string>
     <string name="bluetooth_details_spatial_audio_title" msgid="1368071116994002707">"స్పేషియల్ ఆడియో"</string>
